# NFTone

./: .env.example  .gitignore  .mcp.json  BASELINE-2026-05-13.txt  HANDOFF-2026-05-14.md  HANDOFF.md  MEDIA_TYPES.md  MODULE_BOUNDARIES.md  PHASE-1-VERIFY-2026-05-13.txt  PHASE-1-VERIFY.md  README.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
app/: layout.tsx  page.tsx  providers.tsx
components/: AdaptiveSignIn.tsx  DesktopBadge.tsx  DesktopDeepLinkHandler.tsx  DesktopSignInButton.tsx  OnboardingWizard.tsx  PurchaseDropForm.tsx  RightsDeclarationForm.tsx  SignInButton.tsx  TierBadge.tsx  UploadDropForm.tsx  WalletButton.tsx
desktop/: .gitignore  README.md  SIGNING-SETUP.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  session.rs  sidecar.rs
docs/: 01-whitepaper.md  02-prd.md  03-data-model.md  04-api-events.md  05-integration.md  nftones-integration-architecture.md  nftones-prd.md  nftones-whitepaper-section.md
lib/: auth.ts  desktop.ts  ktrs.ts  prisma.ts  rights.ts  solanaMint.ts  storage.ts  tiers.ts  watermarker.ts
lvtn-adapter-reference/: README.md  package-lock.json  package.json  tsconfig.json
marketing/: 01-founder-dm-pack.md  02-day-one-twitter-thread.md  03-short-form-video-hooks.md  04-founder-mission-post.md  05-waitlist-landing-page.html  06-brand-language-one-pager.md
mock-data/: data.js  data.json
prisma/: schema.prisma
web/: app.js  (+3 more)
(+72 files in other folders)
