[package]
name = "nftones-desktop"
version = "0.1.0"
description = "NFTones desktop shell"
authors = ["NFTones"]
edition = "2021"
rust-version = "1.77"

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-default-run-field
default-run = "nftones-desktop"

[lib]
name = "nftones_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["protocol-asset"] }
tauri-plugin-deep-link = "2.0.1"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-fs = "2.0.3"
tauri-plugin-http = "2.0.4"
tauri-plugin-process = "2.0.1"
tauri-plugin-shell = "2.0.2"
tauri-plugin-store = "2.1.0"
tauri-plugin-updater = "2.0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
url = "2.5"
log = "0.4"
thiserror = "1"

# OS keychain for session/token storage. Cross-platform: macOS Keychain,
# Windows Credential Manager, Linux Secret Service / kwallet.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[features]
# This feature is used for production builds or when a dev server is not
# specified. DO NOT REMOVE!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
